add generic levels for eho

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ Grey Wolf Optimization/.idea/
 .idea/
 Grey Wolf Optimization/doc/main.pdf
 Rat Swarm Optimization/doc/main.pdf
+Grey Wolf Optimization/doc/GWO_doc.pdf
+Rat Swarm Optimization/doc/RSO_doc.pdf
+Rat Swarm Optimization/doc/rso_dokumentation.pdf
